--- a/css/cadastro_org.css
+++ b/css/cadastro_org.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+}
+
 body {
     background-color: #056595;
     display: flex;
@@ -11,11 +17,15 @@ header {
     background-color: #D9D9D9;
     text-align: center;
     padding: 12px 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 h1 {
     margin: 0;
-    font-size: 36px; /* Ajuste conforme necessário */
+    font-size: 36px;
 }
 
 .black {
@@ -87,14 +97,15 @@ button:hover {
 }
 
 footer {
-    position: fixed;
-    bottom: 0;
     width: 100%;
-    height: 40px;
-    background-color: var(--footer-background, #D9D9D9);
+    background-color: #D9D9D9;
     text-align: center;
     font-size: 16px;
     font-style: italic;
     font-weight: bold;
     padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
 }
