Adicionado no menu

--- a/css/menu.css
+++ b/css/menu.css
@@ -1,86 +1,71 @@
-* {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-}
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #f0f0f0;
 }
 
-/* Estilos para o cabeçalho */
+
 header {
-    background-color: #056595;
+    background-color: #007BFF; 
     color: white;
-    padding: 1rem 0;
+    padding: 20px 0;
     text-align: center;
 }
 
-/* Estilos para o menu */
+header h1 {
+    margin: 0;
+    font-size: 2.5em;
+}
+
+header img {
+    display: block;
+    margin: 10px auto;
+    max-width: 100px; 
+}
+
+
+main {
+    padding: 20px;
+    text-align: center;
+}
+
+
+footer {
+    background-color: #007BFF; 
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
+
+nav {
+    margin: 20px 0;
+    color:white;
+}
+
 nav ul {
     list-style-type: none;
-    margin: 0;
     padding: 0;
 }
 
 nav ul li {
     display: inline;
-    margin-right: 20px;
+    margin: 0 10px;
 }
 
 nav ul li a {
-    text-decoration: none;
+    background-color: #007BFF; 
     color: white;
-    transition: color 0.3s;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
 
 nav ul li a:hover {
-    color: #f0f0f0;
-}
-
-/* Estilos para o conteúdo principal */
-main {
-    padding: 2rem;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-/* Estilos para os cartões de ONG */
-.ong-card {
-    background-color: white;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: 1rem;
-    padding: 1rem;
-    width: calc(33% - 2rem);
-    box-sizing: border-box;
-    transition: transform 0.2s;
-}
-
-.ong-card:hover {
-    transform: scale(1.05);
-}
-
-.ong-card p {
-    margin: 0.5rem 0;
-}
-
-/* Estilos para o rodapé */
-footer {
-    width: 100%;
-    background-color: #D9D9D9;
-    text-align: center;
-    font-size: 16px;
-    font-style: italic;
-    font-weight: bold;
-    padding: 10px 0;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
+    background-color: #0056b3;
 }
