--- a/css/cadastro_org.css
+++ b/css/cadastro_org.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     align-items: center; 
     height: 100vh; 
-    padding: 20px; /* Adicionado para evitar corte em telas pequenas */
+    padding: 20px; 
 }
 
 header {
@@ -44,7 +44,7 @@ h1 {
 
 .container {
     width: 100%;
-    max-width: 575px; /* Limitar largura máxima para telas maiores */
+    max-width: 575px; 
     height: auto;
     background-color: #ffffff; 
     display: flex;
@@ -54,8 +54,8 @@ h1 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px; 
     padding: 20px; 
-    margin-top: 60px; /* Adicionado para espaçar abaixo do header */
-    margin-bottom: 60px; /* Adicionado para espaçar acima do footer */
+    margin-top: 60px; 
+    margin-bottom: 60px; 
 }
 
 h1 {
@@ -66,7 +66,7 @@ h1 {
 
 form {
     width: 100%;
-    max-width: 500px; /* Limitar largura máxima para o formulário */
+    max-width: 500px;
     display: flex;
     flex-direction: column;
 }
@@ -120,7 +120,6 @@ footer {
     z-index: 1000;
 }
 
-/* Responsividade */
 @media (max-width: 768px) {
     h1 {
         font-size: 28px;
