--- a/css/parceiros.css
+++ b/css/parceiros.css
@@ -51,7 +51,7 @@
     margin: 0.5rem 0;
   }
 
-  footer {
+footer {
     width: 100%;
     background-color: #d9d9d9;
     text-align: center;
@@ -59,9 +59,10 @@
     font-style: italic;
     font-weight: bold;
     padding: 10px 0;
-    position: relative;
-  }
-
+    position: fixed; 
+    left: 0;
+    bottom: 0;
+}
 
 @media (max-width: 575.98px) {
     main {
