--- a/css/cadastro_org.css
+++ b/css/cadastro_org.css
@@ -44,19 +44,20 @@ h1 {
 
 .container {
     width: 100%;
-    max-width: 575px; 
+    max-width: 575px;
     height: auto;
-    background-color: #ffffff; 
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px; 
-    padding: 20px; 
-    margin-top: 60px; 
-    margin-bottom: 60px; 
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 60px;
+    margin-bottom: 120px; /* Ajuste na margem inferior aqui */
 }
+
 
 h1 {
     margin-bottom: 20px;
@@ -114,11 +115,12 @@ footer {
     font-style: italic;
     font-weight: bold;
     padding: 10px 0;
-    position: fixed;
+    position: fixed; /* Alteração aqui */
     bottom: 0;
     left: 0;
     z-index: 1000;
 }
+
 
 @media (max-width: 768px) {
     h1 {
